--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,7 @@ input::placeholder {
 
 /*---------- 404 PAGE ----------*/
 .background-error {
-  background: url("../images/404-bg.png") no-repeat center center;
+  background: url("../images/404-bg.webp") no-repeat center center;
   background-color: var(--oxford-blue);
   background-size: cover;
 }
